refactor: Rename Login class names, add animation when hovering

--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -1,24 +1,30 @@
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .form-container {
-    position: fixed;
-    left: 40vw;
-    top: 30vh;
+  position: fixed;
+  left: 40vw;
+  top: 30vh;
 }
 
-.form {
+.form-container__form {
   background-color: #fff;
   display: block;
   padding: 1rem;
   max-width: 350px;
   border-radius: 0.5rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-              0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+
+  button {
+    outline: none;
+    border: 1px solid #e5e7eb;
+    margin: 8px 0;
+  }
 }
 
-.form-title {
+.form-container__form__p {
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 600;
@@ -26,29 +32,25 @@
   color: #000;
 }
 
-.input-container {
+.form-container__form__input {
   position: relative;
+
+  input {
+    outline: none;
+    border: 1px solid #e5e7eb;
+    margin: 8px 0;
+    background-color: #fff;
+    padding: 1rem;
+    padding-right: 3rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    width: 250px;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
 }
 
-.input-container input,
-.form button {
-  outline: none;
-  border: 1px solid #e5e7eb;
-  margin: 8px 0;
-}
-
-.input-container input {
-  background-color: #fff;
-  padding: 1rem;
-  padding-right: 3rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  width: 250px;
-  border-radius: 0.5rem;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-}
-
-.submit {
+.form-container__form__btn {
   display: block;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -64,14 +66,44 @@
   text-transform: uppercase;
 }
 
-.signup-link {
+@keyframes bgc__switch__hover {
+  from {
+    background-color: #4f46e5;
+  }
+  to {
+    background-color: #9793da;
+  }
+}
+
+@keyframes bgc__switch__nothover {
+  from {
+    background-color: #9793da;
+  }
+  to {
+    background-color: #4f46e5;
+  }
+}
+
+.form-container__form__btn:hover {
+  animation-name: bgc__switch__hover;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
+}
+
+.form-container__form__btn:not(:hover) {
+  animation-name: bgc__switch__nothover;
+  animation-duration: 400ms;
+  animation-fill-mode: forwards;
+}
+
+.form-container__form__signup {
   color: #6b7280;
   font-size: 0.875rem;
   line-height: 1.25rem;
   text-align: center;
-}
 
-.signup-link a {
-  text-decoration: underline;
-  margin-left: 3px;
+  a {
+    text-decoration: underline;
+    margin-left: 3px;
+  }
 }
